# src/controllers/auth.js
@@ -11,6 +11,20 @@ const Token = require("../models/token")
 module.exports = {
 
     login: async (req, res) => {
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                    email: '*String',
+                }
+            }
+        */
 
         const { username, password } = req.body
 
@@ -55,7 +69,11 @@ module.exports = {
     },
 
     logout: async (req, res) => {
-
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
         const data = req.user ? await Token.deleteOne({ userId: req.user._id }) : null
 
         res.status(200).send({
