# src/controllers/department.js
@@ -8,6 +8,19 @@ const Department = require("../models/department")
 
 module.exports = {
     list: async (req, res) => {
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+        */
 
         const result = await res.getModelList(Department)
 
@@ -18,6 +31,17 @@ module.exports = {
         })
     },
     create: async (req, res) => {
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Department'
+                }
+            }
+        */
         const result = await Department.create(req.body)
         res.status(201).send({
             error: false,
@@ -25,6 +49,10 @@ module.exports = {
         })
     },
     read: async (req, res) => {
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
         // console.log(req.params)
         
         const result = await Department.findById(req.params.id)
@@ -34,6 +62,17 @@ module.exports = {
         })
     },
     update: async (req, res) => {
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Update Department"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Department'
+            }
+        }
+        */
         const result = await Department.updateOne({_id: req.params.id}, req.body, {runValidators: true})
         res.status(202).send({
             error: false,
@@ -42,6 +81,10 @@ module.exports = {
         })
     },
     deleteDepartment: async (req, res) => {
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Delete Department"
+        */
         const result = await Department.deleteOne({_id: req.params.id})
         // console.log(result)
         
@@ -51,6 +94,10 @@ module.exports = {
         })
     },
     personnels: async (req, res) => {
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get Personnels of Department"
+        */
         const Personnel = require("../models/personnel")
         // const result = await Personnel.find({departmentId: req.params.id}).populate("departmentId")
         const result = await res.getModelList(Personnel, {departmentId: req.params.id}, "departmentId")
